# Geometry

./: .clang-format  .travis.yml  Angle.h  BoundingSphere.cpp  BoundingSphere.h  Box.h  BoxHelper.cpp  BoxHelper.h  BoxIntersection.cpp  BoxIntersection.h  CMakeLists.txt  Cone.h  Convert.h  Definitions.h  DualQuaternion.h  Frustum.cpp  Frustum.h  GeometryConfig.cmake.in  Interpolation.h  Line.h  LineTriangleIntersection.h  Matrix3x3.h  Matrix4x4.h  Plane.h  Point.h  PointOctree.h  Quaternion.h  README.md  RayBoxIntersection.cpp  RayBoxIntersection.h  Rect.h  SQT.h  SRT.h  Sphere.h  Tetrahedron.h  Tools.cpp  Tools.h  Triangle.h  TriangleTriangleIntersection.h  Vec2.h  (+7 more)
debian/: changelog  control  copyright  libgeometry0.symbols  rules  watch
doc/: Doxyfile
tests/: BoundingSphereTest.cpp  BoundingSphereTest.h  BoxTest.cpp  BoxTest.h  CMakeLists.txt  ConvertTest.cpp  ConvertTest.h  FrustumTest.cpp  FrustumTest.h  GeometryTestMain.cpp  InterpolationTest.cpp  InterpolationTest.h  LineTest.cpp  LineTest.h  LineTriangleIntersectionTest.cpp  LineTriangleIntersectionTest.h  Matrix4x4Test.cpp  Matrix4x4Test.h  PlaneTest.cpp  PlaneTest.h  PointOctreeTest.cpp  PointOctreeTest.h  QuaternionTest.cpp  QuaternionTest.h  RayBoxIntersectionTest.cpp  RayBoxIntersectionTest.h  RectTest.cpp  RectTest.h  SphereTest.cpp  SphereTest.h  StandardLayout.cpp  TetrahedronTest.cpp  TetrahedronTest.h  TriangleTest.cpp  TriangleTest.h  Vec3Test.cpp  Vec3Test.h  VecHelperTest.cpp  VecHelperTest.h  VecNTest.cpp  (+1 more)
tests/cmake/: FindCppUnit.cmake
